# Acoustic-Phantom-RPi

./: README.md  batch_resize.py
scripts/: acousticPi.sh  startup.sh  wifi-master.sh  wifi-slave.sh
src/: appServer.py  main.py  servoControllerSmooth.py
src/tracking/: CMakeLists.txt  colorTracker.cpp  colorTrackerTest.cpp  colorTracker_gpu.cpp  colorTracker_mac.cpp  colorTracker_mac2  colorTracker_mac2.cpp  colorTracker_mac2.orig  colorTracker_mac2_compile.sh  graphics.cpp  graphics.h  makeTest.sh  makeTracker.sh  makeTracker_mac.sh  makeTracker_mac2.sh  mmalincludes.h  threshfragshader.glsl  yuvfragshader.glsl
